--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </li>
             </ul>
             <div id="nav-buttons" class="d-md-flex col-lg-3 justify-content-lg-end">
-              <p class="my-auto mb-md-3 me-3"></p>
+              <p class="my-auto py-2 me-3"></p>
               <button id="loginBtn" type="button" class="btn btn-outline-light me-3" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
               <button id="registerBtn" type="button" class="btn btn-outline-light me-3" data-bs-toggle="modal" data-bs-target="#registerModal">Register</button>
               <button id="logoutBtn" class="btn btn-outline-light d-none">Logout</button>
@@ -68,11 +68,11 @@
       </div>
 
       <!-- Login Modal -->
-      <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalMenu" aria-hidden="true">
+      <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="loginModal">Login</h1>
+              <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -81,17 +81,17 @@
                   <label for="loginUsername" class="col-md-3 col-form-label text-md-right">Username:</label>
 
                   <div class="col-md-9">
-                    <input id="loginUsername" type="text" class="form-control" name="loginUsername" value="" required autocomplete="loginUsername" autofocus />
+                    <input id="loginUsername" type="text" class="form-control" name="loginUsername" value="" required autocomplete="on" />
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="password" class="col-md-3 col-form-label text-md-right">Password:</label>
 
                   <div class="col-md-9">
-                    <input id="password" type="text" class="form-control" name="password" value="" required placeholder="Your username + 123. eg. 'Joe123'"/>
+                    <input id="password" type="text" class="form-control" name="password" value="" required placeholder="Your username + 123. eg. 'Joe123'" />
                   </div>
                 </div>
-                <button id="loginSubmitBtn" type="submit" class=" btn btn-primary mt-3 px-4">Login</button>
+                <button id="loginSubmitBtn" type="submit" class="btn btn-primary mt-3 px-4">Login</button>
                 <p id="login-msg" class="mt-3"></p>
               </form>
             </div>
@@ -100,11 +100,11 @@
       </div>
 
       <!-- Register Modal -->
-      <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalMenu" aria-hidden="true">
+      <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModal" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="registerModal">Register</h1>
+              <h1 class="modal-title fs-5" id="registerModalLabel">Register</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -113,7 +113,7 @@
                   <label for="registerUsername" class="col-md-3 col-form-label text-md-right">Username:</label>
 
                   <div class="col-md-9">
-                    <input id="registerUsername" type="text" class="form-control" name="registerUsername" value="" required autocomplete="registerUsername" autofocus />
+                    <input id="registerUsername" type="text" class="form-control" name="registerUsername" value="" required autocomplete="on" />
                   </div>
                 </div>
                 <button id="registerSubmitBtn" type="submit" class="btn btn-primary mt-3 px-4">Register</button>
@@ -123,8 +123,7 @@
           </div>
         </div>
       </div>
-
-
+    </main>
     <!-- <footer class="py-3 my-4 border-top">
       <div class="d-flex align-items-center justify-content-center">
         <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 PriceCheck. All rights reserved.</span>
