--- a/scores.html
+++ b/scores.html
@@ -15,7 +15,7 @@
     <script src="js/main.js" defer></script>
   </head>
 
-  <body onload="showProducts()">
+  <body onload="showUsers()">
     <header>
       <nav class="navbar navbar-expand-md navbar-dark bg-info" aria-label="Navigation">
         <div class="container">
@@ -27,10 +27,10 @@
             <a class="navbar-brand col-lg-3 me-0" href="#">PriceCheck</a>
             <ul class="navbar-nav col-lg-6 justify-content-lg-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="scores.html">Scores</a>
+                <a class="nav-link active" aria-current="page" href="#/">Scores</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
@@ -53,10 +53,21 @@
     </header>
 
     <main>
-      <div id="jumbotron" class="container p-4 my-4 bg-body-secondary rounded-3">
-        <div class="text-center">
-          <h1 class="display-5 fw-bold">Welcome to PriceCheck!</h1>
-          <p class="fs-4">All your prices under one roof!</p>
+      <!-- Score List -->
+      <div class="container p-3 my-4 border border-secondary-subtle rounded-3">
+        <h2 class="fw-bold text-center">Scoreboard</h2>
+        <div class="table-responsive">
+          <table class="table table-sm table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Rank</th>
+                <th scope="col">Username</th>
+                <th scope="col">Points</th>
+                <th scope="col">Date Joined</th>
+              </tr>
+            </thead>
+            <tbody id="scores" class="table-group-divider"></tbody>
+          </table>
         </div>
       </div>
 
@@ -116,85 +127,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Input Product Modal -->
-      <div class="modal fade" id="inputModal" tabindex="-1" aria-labelledby="inputModal" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="inputModalLabel">Create Product</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form id="inputForm" class="text-center">
-                <div class="form-group row mb-2">
-                  <label for="product-date" class="col-md-3 col-form-label text-md-right">Date of Price:</label>
-                  <div class="col-md-9">
-                    <input id="product-date" type="date" class="form-control" name="product-date" value="" required autocomplete="on" />
-                  </div>
-                </div>
-
-                <div class="form-group row mb-2">
-                  <label for="product-desc" class="col-md-3 col-form-label text-md-right">Description:</label>
-                  <div class="col-md-9">
-                    <input id="product-desc" type="text" class="form-control" name="product-desc" value="" required />
-                  </div>
-                </div>
-
-                <div class="form-group row mb-2">
-                  <label for="product-price" class="col-md-3 col-form-label text-md-right">Price:</label>
-                  <div class="col-md-9">
-                    <input id="product-price" type="text" class="form-control" name="product-price" value="" required />
-                  </div>
-                </div>
-
-                <div class="form-group row mb-2">
-                  <label for="product-vendor" class="col-md-3 col-form-label text-md-right">Vendor:</label>
-                  <div class="col-md-9">
-                    <input id="product-vendor" type="text" class="form-control" name="product-vendor" value="" />
-                  </div>
-                </div>
-
-                <button id="inputSubmitBtn" type="submit" class="btn btn-success mt-3 px-4">Upload</button>
-                <button type="button" class="btn btn-secondary mt-3 px-4" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
-                <p id="input-msg" class="mt-3"></p>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container d-flex justify-content-end">
-        <form id="search-form" action="#" method="GET" class="d-flex" role="search">
-          <input name="search" class="form-control me-2" type="search" placeholder="Search Products" aria-label="Search" />
-          <button class="btn btn-secondary me-2" type="submit">Search</button>
-        </form>
-        <button class="btn btn-success d-inline-block" type="button" data-bs-toggle="modal" data-bs-target="#inputModal">Create Product</button>
-      </div>
-
-      <!-- Products List -->
-      <div class="container p-3 my-4 border border-secondary-subtle rounded-3">
-        <div class="table-responsive">
-          <table class="table table-sm">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Date of Price</th>
-                <th scope="col">Product</th>
-                <th scope="col">Price</th>
-                <th scope="col">Vendor</th>
-                <th scope="col">Entered By:</th>
-              </tr>
-            </thead>
-            <tbody id="results" class="table-group-divider"></tbody>
-          </table>
-        </div>
-      </div>
     </main>
-    <!-- <footer class="py-3 my-4 border-top">
-      <div class="d-flex align-items-center justify-content-center">
-        <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 PriceCheck. All rights reserved.</span>
-      </div>
-    </footer> -->
   </body>
 </html>
