minor bg color changes to body and products list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="js/main.js" defer></script>
   </head>
 
-  <body onload="showProducts(), showUsers()">
+  <body onload="showProducts(), showUsers()" class="bg-light">
     <header>
       <nav class="navbar navbar-expand-md navbar-dark bg-info" aria-label="Navigation">
         <div class="container">
@@ -193,7 +193,7 @@
       <!-- Products List -->
       <div class="container p-3 my-4 border border-secondary-subtle rounded-3">
         <div class="table-responsive">
-          <table class="table table-sm">
+          <table class="table table-sm table-light">
             <thead>
               <tr>
                 <th scope="col">#</th>
